--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿</html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,20 +13,12 @@
 </head>
 <body>
     <!--<div class="chat-container">
-        <div class="chat-header">Chat</div>
-        <div class="chat-messages" id="chatMessages">-->
-    <!-- Messages will be appended here -->
-    <!--</div>
         <div class="chat-input">
-            <input type="text" id="messageInput" placeholder="Type a message...">
-            <button onclick="sendMessage()">Send</button>
+            <input type="text" id="messageInput" placeholder="Your message" />
+            <button id="sendButton">Send</button>
         </div>
+        <ul id="messagesList"></ul>
     </div>-->
-    <div>
-        <input type="text" id="userInput" placeholder="Your name" />
-        <input type="text" id="messageInput" placeholder="Your message" />
-        <button id="sendButton">Send</button>
-    </div>
-    <ul id="messagesList"></ul>
+    <div id="chatContainer"></div>
 </body>
 </html>
