--- a/wwwroot/login.html
+++ b/wwwroot/login.html
@@ -13,7 +13,7 @@
             <input type="text" id="username" name="username" required>
 
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password">
 
             <button type="submit">Login</button>
         </form>
